[Integration Tests] Improve E2E tests for JDBC RMs
PiperOrigin-RevId: 513295850